--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="js/bootstrap.min.js"></script>
 </head>
 
-<body>
+<body class="body ">
     <nav class=" navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
                 <a class="nav-brand" href="index.html"><img style="width: 40px;height: 40px;" src="img/logo.jpg" /></a>
             </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav" role="tablist">
                     <li role="presentation" class="active"> <a href="index.html">首页</a> </li>
                     <li role="presentation"> <a href="recommend.html">游戏佳作推荐</a> </li>
@@ -36,15 +36,28 @@
                     <li role="presentation" class="hidden-sm"> <a href="personalinformation.html">添加我为好友</a> </li>
                 </ul>
                 <form class="navbar-form navbar-right " role="search" action="http://store.steampowered.com/search/">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="游戏搜索" name="term"> </div>
-                    <button type="submit" class="btn btn-default" onclick="var $Form = $J(this).parents('form'); $Form.submit(); return false;">搜索</button>
+                    <div class="input-group">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="游戏搜索" name="term"> </div> <span class="input-group-btn">
+                              <button type="submit" class="btn btn-default" onclick="var $Form = $J(this).parents('form'); $Form.submit(); return false;"><span class="glyphicon glyphicon-search"></span></button>
+                        </span>
+                    </div>
                 </form>
             </div>
         </div>
     </nav>
+    <div class="reheader2 "></div>
     <article class="slider">
-        <section class="col-md-10 col-md-offset-1">
+        <section class=" headercover2">
+            <div style="margin:200px auto;">
+                <h1>Let's Play Games</h1>
+                <p>游戏作为第九艺术</p>
+                <p>却曾被视为精神鸦片</p>
+                <p>无论你玩儿不玩儿游戏</p>
+                <p>欢迎走进游戏的世界</p>
+            </div>
+        </section>
+        <section>
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
@@ -54,21 +67,17 @@
                 </ol>
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
-                    <div class="item active"> <img src="img/slider0.png" alt="steam" width="100%">
+                    <div class="item active"> <img src="img/slider0.jpg" alt="Ti6 Wings Dota2夺冠" width="100%">
                         <div class="carousel-caption">
-                            <h2>	Steam商店界面</h2>
-                            <p><a href="http://store.steampowered.com/" class="navbar-link">立即浏览</a></p>
-                        </div>
+                            <h2>Ti6 Wings Dota2夺冠</h2> </div>
                     </div>
-                    <div class="item"> <img src="img/slider1.png" alt="uplay" width="100%">
+                    <div class="item"> <img src="img/slider1.jpg" alt="VR游戏来临" width="100%">
                         <div class="carousel-caption">
-                            <h2>	UPlay商店界面</h2>
-                            <p><a href="http://store.steampowered.com/" class="navbar-link">立即浏览</a></p>
-                        </div>
+                            <h2>VR游戏来临</h2> </div>
                     </div>
-                    <div class="item"> <img src="img/slider2.png" alt="origin" width="100%">
+                    <div class="item"> <img src="img/slider2.jpg" alt="XBOX one S" width="100%">
                         <div class="carousel-caption">
-                            <h2>Origin商店界面</h2>
+                            <h2>微软新主机</h2>
                             <p><a href="http://store.steampowered.com/" class="navbar-link">立即浏览</a></p>
                         </div>
                     </div>
@@ -76,6 +85,21 @@
                 <!-- Controls -->
                 <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> <span class="sr-only">Previous</span> </a>
                 <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> <span class="sr-only">Next</span> </a>
+            </div>
+        </section>
+        <section class="pagegrey">
+            <div class="container">
+                <div class="pagediv row">
+                    <div class="col-md-4">
+                        <center>
+                            <h2>Steam</h2></center> <img class="img-responsive" alt="DOOM图" src="img/game2.jpg"></div>
+                    <div class="col-md-4">
+                        <center>
+                            <h2>Origin</h2></center><img class="img-responsive" alt="DOOM图" src="img/game2.jpg"></div>
+                    <div class="col-md-4">
+                        <center>
+                            <h2>Uplay</h2></center><img class="img-responsive" alt="DOOM图" src="img/game2.jpg"></div>
+                </div>
             </div>
         </section>
     </article>
